--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
-feedparser>=6.0.0
-PyYAML>=6.0
-python-dateutil>=2.8.0
-scikit-learn>=1.0.0
-numpy>=1.20.0
-pytest>=7.0.0
+
+
+requests>=2.32.3
+feedparser>=6.0.11
+PyYAML>=6.0.1
+python-dateutil>=2.9.0.post0
+
+numpy>=1.26.4
+pandas>=2.2.2
+scipy>=1.13.1
+scikit-learn>=1.5.0
+
+regex>=2024.5.15
+SQLAlchemy>=2.0.31
+
+vaderSentiment>=3.3.2
+textblob>=0.18.0.post0
+
+psycopg[binary]>=3.1.19      # if using PostgreSQL
+rich>=13.7.1
+structlog>=24.2.0
